--- a/order.html
+++ b/order.html
@@ -76,11 +76,18 @@ body {
         <strong>You are purchasing a micro-offset.  We buy carbon offsets in bulk so you don't have to.</strong>  Now you can target small purchases like your last gas fill-up.
         </p>
         <p>
-        We don't profit.  Every month, bulk purchase records are <a href="http://neutralgas.com/transparency">published</a> online.  You'll be notified by email when your order is fulfilled as part of a bulk purchase on the last day of the month.
+        We don't profit.  Every month, bulk purchase records are <a href="http://neutralgas.com/transparency">published</a> online.  You'll be notified by email when your order is fulfilled on the last day of the month.
         </p>
       </div>
       <div class="purchase-container">
-        <button id="purchase-button" class="btn btn-success">Purchase</button>
+        <div>
+          <label>Gallons of gas &nbsp;
+            <input id="gallons" type="number" value="10" style="width: 3em"/>
+          </label>
+        </div>
+        <div>
+          <button id="purchase-button" class="btn btn-success">Purchase offset: $<span id="price">1</span></button>
+        </div>
       </div>
 
       <div class="img-container">
@@ -90,7 +97,7 @@ body {
         </p>
       </div>
       <div class="footer">
-        &copy; 2015 <a href="http://ianww.com">ian webster</a>
+        &copy; 2015 <a href="http://ianww.com">Ian Webster</a>
       </div>
     </div> <!-- /center-block -->
   </div>  <!-- /row -->
@@ -101,7 +108,7 @@ body {
 <script>
 $(function() {
   // $('button').trigger('click');
-  var amount = getParameterByName('amount') || 1000;
+  var stripePrice = getParameterByName('amount') || 100;
 
   var handler = StripeCheckout.configure({
     key: 'pk_test_6pRNASCoBOKtIshFeQd4XMUh'
@@ -111,10 +118,25 @@ $(function() {
     handler.open({
       name: 'Neutral Gas',
       description: 'Micro carbon offset',
-      amount: amount,
+      amount: stripePrice,
     });
     return false;
   });
+
+  var updatePrice = function() {
+    var val = parseInt($(this).val());
+    var price = (val/10);
+    if (isNaN(price) || price <= 0) {
+      price = 10;
+    }
+    var display = Math.round(price) == price ?
+      price.toFixed(0) : price.toFixed(2)
+    $('#price').text(display);
+    stripePrice = Math.round(price * 100);
+  };
+
+  $('#gallons').on('keyup', updatePrice);
+  $('#gallons').on('change', updatePrice);
 
   $(window).on('popstate', function() {
     handler.close();
