--- a/order.html
+++ b/order.html
@@ -73,7 +73,7 @@ body {
       </div>
       <div>
         <p>
-        <strong>You are purchasing a micro-offset.  We buy carbon offsets in bulk so you don't have to</strong>, enabling you to target small purchases like your last gas fill-up.
+        <strong>You are purchasing a micro-offset.  We buy carbon offsets in bulk so you don't have to</strong>, letting you target small purchases like your last gas fill-up.
         </p>
         <p>
         We don't profit.  Every month, bulk purchase records are <a href="http://neutralgas.com/transparency">published</a> online.  You'll be notified by email when your order is fulfilled on the last day of the month.
@@ -93,11 +93,11 @@ body {
       <div class="img-container">
         <img src="http://www.weebly.com/uploads/4/8/0/0/48009693/382885093.jpg">
         <p>
-          We support carbon-reducing projects in places like Costa Rica and Ghana.
+          We support carbon-positive projects in places like Costa Rica and Ghana.
         </p>
       </div>
       <div class="footer">
-        &copy; 2015 <a href="http://ianww.com">Ian Webster</a>
+        &copy; 2015 Neutral Gas &middot; <a href="http://ianww.com">Ian Webster</a>
       </div>
     </div> <!-- /center-block -->
   </div>  <!-- /row -->
