--- a/transparency.html
+++ b/transparency.html
@@ -73,13 +73,15 @@ body {
       </div>
       <div style="margin-bottom: 40px">
         <p>
-        Our public launch was in mid-May 2015.
+        Our public launch was in mid-May 2015.  The next report will be released on June 1st, for the month of May.
         </p>
+<!--
         <p>
           <ul>
             <li><a href="#">April 2015</a> - 5 micro-offsets totalling $10 - private beta</li>
           </ul>
         </p>
+-->
       </div>
       <div class="footer">
         &copy; 2015 <a href="http://ianww.com">Ian Webster</a>
