--- a/transparency.html
+++ b/transparency.html
@@ -73,7 +73,7 @@ body {
       </div>
       <div style="margin-bottom: 40px">
         <p>
-        Our public launch was in mid-May 2015.  The next report will be released on June 1st, for the month of May.
+        Our public launch was in mid-May 2015.  The next report will be released on June 1st, for the month of May.  Questions?  Please email <a href="mailto:contact@neutralgas.com">contact@neutralgas.com</a>.
         </p>
 <!--
         <p>
