no weebly https

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
 <head>
 <title>Neutral Gas</title>
+<script>
+if (window.location.href.indexOf('https://') == 0) {
+  // sorry.
+  window.location.href = 'http://neutralgas.com';
+}
+</script>
 <style>
 body {
     margin: 0;
