--- a/order.html
+++ b/order.html
@@ -73,7 +73,7 @@ body {
       </div>
       <div>
         <p>
-        <strong>You are purchasing a micro-offset.  We buy carbon offsets in bulk so you don't have to</strong>, letting you target small purchases like your last gas fill-up.
+        <strong>You are purchasing a micro-offset.  We buy carbon offsets in bulk so you don't have to</strong>.  Instead, you can target small purchases like your last gas fill-up.
         </p>
         <p>
         We don't profit.  Every month, bulk purchase records are <a href="https://neutralgas.com/transparency">published</a> online.  You'll be notified by email when your order is fulfilled on the last day of the month.
