--- a/order.html
+++ b/order.html
@@ -76,7 +76,7 @@ body {
         <strong>You are purchasing a micro-offset.  We buy carbon offsets in bulk so you don't have to</strong>.  Instead, you can target small purchases like your last gas fill-up.
         </p>
         <p>
-        We don't profit.  Every month, bulk purchase records are <a href="https://neutralgas.com/transparency">published</a> online.  You'll be notified by email when your order is fulfilled on the last day of the month.
+        We don't profit.  Every month, bulk purchase records are <a href="https://neutralgas.com/transparency.html">published</a> online.  You'll be notified by email when your order is fulfilled on the last day of the month.
         </p>
       </div>
       <div class="purchase-container">
