--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Neutral Gas</title>
+<title>Neutral Gas - Carbon Micro-Offsets</title>
 <script>
 if (window.location.href.indexOf('https://') == 0) {
   // sorry.
