--- a/order.html
+++ b/order.html
@@ -2,6 +2,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Order | Neutral Gas</title>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 <style>
 body {
