--- a/order.html
+++ b/order.html
@@ -116,7 +116,11 @@ body {
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
 <script>
 $(function() {
-  var stripePrice = getParameterByName('amount') || 100;
+  var presetAmount = getParameterByName('amount');
+  var stripePrice = presetAmount || 100;
+  if (presetAmount) {
+    $('#gallons').val(parseInt(presetAmount / 11.11));
+  }
 
   var handler = StripeCheckout.configure({
     key: 'pk_test_DfWFqx41f7WRUXrMKEXIOYXQ',
@@ -158,6 +162,7 @@ $(function() {
 
   $('#gallons').on('keyup', updatePrice);
   $('#gallons').on('change', updatePrice);
+  updatePrice.call(document.getElementById('gallons'));
 
   $(window).on('popstate', function() {
     handler.close();
