--- a/home.html
+++ b/home.html
@@ -140,9 +140,9 @@ body {
 
           <p>
             <ul style="line-height: 1.8">
-              <li>Carbon offsets reduce emissions elsewhere in order to compensate for your own emissions.</li>
-              <li>We offer "micro" offsets so you can avoid bulk purchases and instead focus on specific impact.</li>
-              <li>We don't make any profit and we post records of all offset purchases.</li>
+              <li>Carbon offsets reduce emissions elsewhere in order to compensate for your environmental impact.</li>
+              <li>We offer "micro" offsets so you can avoid bulk purchases and focus on specific actions.</li>
+              <li>We don't make any profit.  Records of our offset fulfillment are posted online.</li>
             </ul>
           </p>
         </div>
