no mixed content

--- a/home.html
+++ b/home.html
@@ -76,7 +76,7 @@ body {
 }
 
 .banner {
-  background: url(http://cdn1.editmysite.com/uploads/4/8/0/0/48009693/background-images/1157337551.jpg);
+  background: url(https://cdn1.editmysite.com/uploads/4/8/0/0/48009693/background-images/1157337551.jpg);
   background-color: transparent;
   background-size: cover;
   background-position: 50% 50%;
