--- a/home.html
+++ b/home.html
@@ -28,11 +28,13 @@ body {
 }
 
 .purchase-container {
+  font-size: 19px;
   margin-top: 30px;
   text-align: center;
 }
 
 .purchase-container button {
+  font-size: 15px;
   margin-top:10px;
   font-weight: bold;
 }
