--- a/home.html
+++ b/home.html
@@ -11,9 +11,14 @@ if (window.location.href.indexOf('https://') < 0 && window.location.href.indexOf
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 <style>
 body {
-  margin-top: 10px;
+  margin-bottom: 30px;
+/*
   background-color: rgb(236, 255, 236);
+*/
   color: #404040;
+
+  font-size: 16px;
+  line-height: 1.65;
 }
 
 @media only screen and (max-device-width: 480px) {
@@ -31,6 +36,7 @@ body {
   font-size: 19px;
   margin-top: 30px;
   text-align: center;
+  margin-bottom: 30px;
 }
 
 .purchase-container button {
@@ -40,11 +46,9 @@ body {
 }
 
 .explanation {
-  margin-top: 40px;
 }
 
 .img-container {
-  margin-top: 40px;
   margin-bottom: 30px;
   text-align: center;
   color: #aaa;
@@ -66,7 +70,6 @@ body {
   padding: 0;
   margin: 0;
   width: 100%;
-  background-color: rgb(203, 255, 203);
   text-align: center;
   padding: 10px;
   font-size: 10px;
@@ -125,11 +128,11 @@ body {
 </style>
 </head>
 <body>
-<div style="text-align:center; margin-bottom: 15px;">
-  <span style="font-size: 38px; color: rgb(92, 184, 92);"n>
+<div style="text-align:center; padding: 10px; background-color:#006530">
+  <span style="font-size: 20px; color: rgb(92, 184, 92);"n>
     <i class="glyphicon glyphicon-tree-deciduous" style="vertical-align: middle; padding-bottom: 8px;"></i>
   </span>
-  <span style="font-size:28px;">Neutral Gas</span>
+  <span style="color:white; font-size:20px;">Neutral Gas</span>
 </div>
 <div class="banner">
   <p class="banner-main">Make your car eco-friendly for $1 per fill-up</p>
