--- a/home.html
+++ b/home.html
@@ -140,7 +140,7 @@ body {
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-lg-10 col-lg-offset-1 main">
+    <div class="col-md-10 col-md-offset-1 main">
       <div>
         <p id="thanks" style="display:none">
           Thanks!  Your order is being processed.  We'll follow up with confirmation of your offset.
@@ -171,7 +171,7 @@ body {
         </div>
       </div>
 
-      <div class="explanation col-lg-6">
+      <div class="explanation col-md-6">
         <p><strong>How it works</strong></p>
         <p>
         A carbon offset is a reduction in emissions of carbon dioxide or greenhouse gases made in order to compensate for an emission made elsewhere.
@@ -187,7 +187,7 @@ body {
         All funds charged by Neutral Gas, less credit card fees, go to fund sustainable projects via the <a href="http://www.carbonneutral.com/">Carbon Neutral Company</a>.
         </p>
       </div>
-      <div class="img-container col-offset-6 col-lg-6">
+      <div class="img-container col-offset-6 col-md-6">
         <img src="https://www.weebly.com/uploads/4/8/0/0/48009693/382885093.jpg">
         <p>
           We support carbon-positive projects in places like Costa Rica and Ghana.
