--- a/home.html
+++ b/home.html
@@ -230,7 +230,7 @@ $(function() {
       name: 'Neutral Gas',
       description: 'Micro carbon offset',
       amount: stripePrice,
-      bitcoin: true
+      //bitcoin: true
     });
     mixpanel.track('purchase click');
     return false;
